disabled text selection, option to see coordinates ask before delete all,small text before rotation directions, angle marked on the arrow mark, bug fixed- not able to select object while image is overlapping

--- a/src/App.css
+++ b/src/App.css
@@ -69,3 +69,21 @@
   justify-content: center;
   align-items: center;
 }
+.crossed{
+  position: relative;
+}
+.crossed::before{
+  content: "";
+    position: absolute;
+    top: 50%;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background-color: #fff;
+    transform: translateY(-50%) rotate(-45deg);
+    z-index: 1;
+}
+.text-outline{
+  text-shadow: -1px -1px 0 #ffffff, 1px -1px 0 #ffffff, -1px 1px 0 #ffffff, 1px 1px 0 #ffffff;
+
+}
